@@ -78,6 +78,7 @@ DIST openssh-5.9p1+x509-7.0.diff.gz 181263 RMD160 edc39eacc815909358a9abfee738ba
 DIST openssh-5.9p1-hpn13v11.diff.gz 21971 RMD160 d22bbdcc48efb4ce0e0cc37bb7d8ff4705806f34 SHA1 3dbacf253bcbc631db7ca5eaf35cbbc8a1f3f2c3 SHA256 6a47a9e57f87385cac9a380b0b1649b73532afaf40c15f62e9236427c84e7aae
 DIST openssh-5.9p1.tar.gz 1110014 RMD160 12d92321a2b9f404641a9cdada738784eb30e1cd SHA1 ac4e0055421e9543f0af5da607a72cf5922dcc56 SHA256 8d3e8b6b6ff04b525a6dfa6fdeb6a99043ccf6c3310cc32eba84c939b07777d5
 DIST openssh-6.0p1+x509-7.1.diff.gz 200986 RMD160 7aa0550460ccd17a008b5e6b74077873328b4cad SHA1 59aaceac1ca83e1c070d641aa95a51873f9b65e5 SHA256 c11e3837704a24393353fe264d61ffea8c1f23c0cb5b8261866c25677930768b
+DIST openssh-6.0p1-hpn13v11.diff.bz2 19979 RMD160 7ea83ce2982c9a9c0b81d97105c6c526dd164432 SHA1 217493239b3d846ac98a87634ed7b2c6a2afc88d SHA256 a096f6ee6dfddb3996b5e7b806ece2a7709c8cce6560eb026c28d3fb56f71ee9
 DIST openssh-6.0p1-hpn13v12.diff.gz 20223 RMD160 722ba7c8572fab1d18e7547e65da0b0e1fd2035a SHA1 19d9ee9836b7611bc03e0f7c70f71cea30a53d49 SHA256 b6158c10fac153dd2a9f5d9b29df1e4db17a91f84f100b99526655317d9bf4c0
 DIST openssh-6.0p1.tar.gz 1126034 RMD160 afad16fac6500da5cdfad94e5b3cac8c68223374 SHA1 f691e53ef83417031a2854b8b1b661c9c08e4422 SHA256 589d48e952d6c017e667873486b5df63222f9133d417d0002bd6429d9bd882de
 DIST openssh-lpk-5.4p1-0.3.13.patch.gz 18105 RMD160 734b2c3ea740b6de610e3bfa91c93a2540b79acc SHA1 4c73f21b16db41c16e096db834380ec53f15c723 SHA256 4e5dbe769e487c914ecc5b104866f6d4412cbe35c3f2bed897d06f7d824878be
@@ -91,13 +92,14 @@ EBUILD openssh-5.8_p2-r1.ebuild 9228 RMD160 f3ba6be9d7fcf3a421cafe4161ed56288872
 EBUILD openssh-5.8_p2.ebuild 9225 RMD160 248079b6bbbfb05adcbd13adbff2619f6a7896ec SHA1 fc35432da21ae9948c73ee272ee065c7adfcc8ca SHA256 b76a72797f693dce8905f79c3fc868a9f627804f0a097c659e9c46cbbfa46f8a
 EBUILD openssh-5.9_p1-r3.ebuild 9876 RMD160 2ca3c52e534e67bc1753b429c582bee832578706 SHA1 8833358777f2dd7d845083101631c9272f01a42a SHA256 c2a411e6b08fb348b5d66dfcbf630f82d1da07ff67956205ae32ca9cce2c4e31
 EBUILD openssh-5.9_p1-r4.ebuild 9936 RMD160 1258ef6aa9b5351487ecde823e1c900a6571fd67 SHA1 2a10314cd768732f0831e4f5263c097192e5775f SHA256 29614664eb06d945472ff944b0c2ee9f5a93786f83c027894958865e7119ad23
+EBUILD openssh-6.0_p1-r1.ebuild 10192 RMD160 f7deded8686d0e43624b4308831a9c3b0d5c7c59 SHA1 958ea2537ed0df1a9651000843dbb3d29943be3e SHA256 5338a3af8c7488d1f3acc2213361f92e0b5dd0823ba789311cce768b460809b4
 EBUILD openssh-6.0_p1.ebuild 10190 RMD160 43351ec5ae1cdfdc358cc75623eb171392bbc043 SHA1 446704cba45e44b06f894e4ff9c35d14aea885f7 SHA256 74eb7db849f52f2a60a4e704dd5376a5927da03a72af5769045fdd2b9c245180
-MISC ChangeLog 71646 RMD160 95b169dd6081b8664e78321543da86e7ad603f1d SHA1 ff165aef5ccf36c3f12caed13414f2d2a3ed4d1e SHA256 c0f6791aded8ea2fbfd9772919d905fad94e09a925ad4bb86dbbe1143da6a63c
+MISC ChangeLog 71856 RMD160 1602efc481791b48814c2d015b503d08baec7249 SHA1 df2cffe1f4b0aef682ce997cb11076ca4023ee29 SHA256 6e193efb28bd70f72697e1f96b2e5dc267002e949b6db25ad4fdffe8823f3f70
 MISC metadata.xml 1599 RMD160 31fdd1531a4111aa437882680029451b29ddf4aa SHA1 af53a6887ebf563150184ab40b4cc018ab4e4d3f SHA256 fddc51b98b6831f5bc0f1f5fdeb78c064f9c40fc5c9a9f31ec816890e6aade86
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/LNPEACgkQX3X2B8XHTolQgwCfepI1ob0eaKMox+moszQDpfHi
-/NcAoJYOt1TWRdHrhy67H3j4p7wrCg05
-=Dhih
+iEYEARECAAYFAk/XpysACgkQX3X2B8XHTonu0QCdGGP+nv9WMabUKPkO7JmW/cmj
+BcUAnjgQLuHG4XdAMQY95ylInUT+ojQY
+=xM3J
 -----END PGP SIGNATURE-----
